# i2-bridge

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/controllers/: base_controller.py
app/core/: config.py  telemetry.py
app/repositories/: base_repository.py
deploy/helm/i2-bridge/: Chart.yaml  values.yaml
sample/analyzer/: analyzer.py  report.txt
sample/tree/: sitter.py
